<resources>
    <string name="app_name">2340Project1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo_header">My To Do List:</string>
    <string name="todo_button">Add</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planner">My Planner</string>
    <string name="todo_fragment">To-Do List</string>
    <string name="classes_fragment">Classes</string>
    <string name="classes_title">Classes</string>
    <string name="assignments_fragment">Assignments</string>
    <string name="classes">Classes</string>
    <string name="exams">Exams</string>
    <string name="add_exam">Add Exam</string>
    <string name="enter_exam_topic">Enter Exam Topic</string>
    <string name="enter_exam_date">Enter Exam Date</string>
    <string name="enter_exam_time">Enter Exam Time</string>
    <string name="enter_exam_location">Enter Exam Location</string>
    <string name="add">Add</string>
    <string name="enter_exam_date_m_d">Enter Exam Date (M/D)</string>
    <string name="enter_exam_month">Enter Exam Month</string>
    <string name="enter_exam_day">Enter Exam Day</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="enter_assignment_name">Enter Assignment Name</string>
    <string name="enter_assignment_due_month">Enter Assignment Due Month</string>
    <string name="enter_assignment_due_day">Enter Assignment Due Day</string>
    <string name="enter_assignment_due_time">Enter Assignment Due Time</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="choose_class">Choose a class to view and add assignments for:</string>
</resources>